@@ -21,4 +21,4 @@ Animals
 * Deer: (deer).                 Ruminent antlered mammal.
 * Emu: (emu).                   A flightless bird from Australia.
 * Fisher: (fisher).             A marten from North America.
-* Gnu: (gnu).A wildebeest native to the African savannah.
+* Gnu: (gnu). A wildebeest native to the African savannah.
